fix: remove favorites by request payload
