# docs/swagger.json
@@ -490,9 +490,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/v1/favorites/{id}": {
+            },
             "delete": {
                 "security": [
                     {
@@ -504,6 +502,17 @@
                     "favorites"
                 ],
                 "summary": "Deletar um filme ou série nos favoritos de um perfil",
+                "parameters": [
+                    {
+                        "description": "Corpo da requisicao para remover um favorito",
+                        "name": "FavoriteRequestDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto_favorite.FavoriteRequestDto"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
